// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT license.

syntax = "proto3";

package provider;

service Provider {
    rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
    rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
    rpc Invoke (InvokeRequest) returns (InvokeResponse);
}

message SubscribeRequest {
   string id = 1;
   string uri = 2;
}

message SubscribeResponse {
}

message UnsubscribeRequest {
   string id = 1;
   string uri = 2;
}

message UnsubscribeResponse {
}

message GetRequest {
   string id = 1;
   string uri = 2;
}

message GetResponse {
}

message SetRequest {
   string id = 1;
   string value = 2;
}

message SetResponse {
}

message InvokeRequest {
   string id = 1;
   string uri = 2;
   string payload = 3;
}

message InvokeResponse {
}